# scada-chatbot

./: .dockerignore  .env  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  env.example  init-db.sql  pyproject.toml
data/d_mart/: processing_results.json
src/: __init__.py  config.py  database.py  document_processor.py  rag_pipeline.py  streamlit_app.py
test/: README.md  run_tests.py  test_ollama_models.py  test_rag_pipeline.py
